fix(a11y): solve contrast issues on the hero and main product

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,10 @@
 .main-product {
     --col-align: center;
-    --color-text: var(--system-color-pale);
+    --color-text: var(--system-color-white);
     --sm-circle: var(--sm, 37%);
     --md-circle: var(--md, 53%);
     --xl-circle: var(--xl, 87%);
-    --circle-clr: hsla(0, 0%, 85%, 0.3);
+    --circle-clr: hsla(0, 0%, 0%, 0.2);
     --link-fill: var(--system-color-dark);
     --link-hover-fill: hsl(0, 0%, 30%);
     --outline-clr: var(--color-fill);
@@ -119,7 +119,7 @@ a:where(:is(.main-product, .hero, .product-2, .third-product) *) {
     border-image: var(--section-bdr-img);
 
     &>div {
-        border-image: var(--bdr-img, radial-gradient(hsla(0, 0%, 0%, 0.3), hsla(0, 0%, 0%, 0.3)) 1 fill / 0/ 1.5em 0);
+        border-image: var(--bdr-img, radial-gradient(hsla(0, 0%, 0%, 0.5), hsla(0, 0%, 0%, 0.5)) 1 fill / 0/ 1.5em 0);
     }
 }
 
